--- a/index.css
+++ b/index.css
@@ -33,17 +33,24 @@ header a{
     list-style:none;
 }
 
-.top-wrap{
+.logo{
+    position:relative;
     width:100%;
     height:800px;
-    background-image:url(img/top1.jpg);
-    color:rgb(46, 24, 248);
+}
+
+.top-wrap{
+    position:absolute;
+    top: -10px;
+    width:100%;
+    height:800px;
+    color:rgb(247, 246, 253);
     font-size:80px;
-    font-weight: 500;
+    font-weight: 700;
     background-size:cover;
     text-align: center;
-    padding-top: 100px;
-    text-shadow: 2px #000;
+    padding-top: 150px;
+    text-shadow:2px 2px 0 black,-2px 2px 0 black,2px -2px 0 black,-2px -2px 0 black;
 }
 
 .active{
@@ -155,6 +162,7 @@ header a{
     width: 250px;
     height:300px;
     border: 5px solid rgb(36, 221, 196);
+    background-color:rgb(36, 221, 196, 0.1);
     margin-right: 60px;
     margin-top: 60px;
     vertical-align: middle;
@@ -174,8 +182,7 @@ header a{
 
 .sns-wrap{
     margin-top:-22px;
-    height:500px;
-    background-color:rgb(249, 253, 10, 0.3);
+    height:800px;
     text-align: center;
 }
 
