--- a/index.css
+++ b/index.css
@@ -195,12 +195,15 @@ header a{
 .contact-wrap{
     background-color:rgb(36, 221, 196, 0.3);
     padding:20px 0;
-    margin-top:-22px;
+    margin-top:-20px;
+    display:inline-block;
+    text-align:center;
 }
 
 .contact-sentence{
     padding-top:60px;
     font-size:25px;
+    display:inline-block;
 }
 
 .contact h2{
